added TestSuite tests - 21 tests running OK

--- a/src/Test-Unit/README
+++ b/src/Test-Unit/README
@@ -1,6 +1,6 @@
 use TestRunner.pl like this (lib adjusted for this directory):
 
-	perl -I./lib TestRunner.pl Test::Unit::tests::TestTest
+	perl -I./lib TestRunner.pl Test::Unit::tests::AllTests
 
 and TkTestRunner like this:
 
