fixed make_inner_class(), put it in own module, changed calls, added testcase

--- a/src/Test-Unit/README
+++ b/src/Test-Unit/README
@@ -4,4 +4,4 @@ use TestRunner.pl like this (lib adjusted for this directory):
 
 and TkTestRunner like this:
 
-	perl -I./lib TkTestRunner.pl Test::Unit::tests::TestTest
+	perl -I./lib TkTestRunner.pl Test::Unit::tests::AllTests
