procedural API can now compose test suites, too

--- a/src/Test-Unit/README
+++ b/src/Test-Unit/README
@@ -11,3 +11,4 @@ and the examples for the procedural API like this:
 	perl -w -I./lib examples/procedural-ok-example.pl
 	perl -w -I./lib examples/procedural-fail-example.pl
 	perl -w -I./lib examples/procedural-another-package-example.pl
+	perl -w -I./lib examples/procedural-adding-suites-example.pl
