--- a/src/Test-Unit/Changes
+++ b/src/Test-Unit/Changes
@@ -1,5 +1,21 @@
 Revision history for Perl extension Test::Unit.
 
-0.1  Tue Feb 15 19:32:49 2000
-	- original version; created by h2xs 1.18
+0.1
+	- much revised and extended due to PerlUnit effort 
+	  (see http://sourceforge.net/project?group_id=2653)
+	- INCOMPATIBLE CHANGES: old interface style is discontinued
+	  (if you want support for this, use the old 0.06 version)
+	- resembles JUnit approach much more closely
+	- adapters to Test::Harness style tests
+	- GUI test runner using Tk
+	- stack traces for errors and failures
+	- object-oriented implementation approach supporting
+	  test inheritance and test specialization 
 
+0.06
+	- first CPAN release
+0.05
+	- initial release version
+
+0.01 - 0.04
+	- development versions
