--- a/src/Test-Unit/examples/README
+++ b/src/Test-Unit/examples/README
@@ -38,7 +38,7 @@ and the (running) examples named 'patch100132-1' and
 	perl -I ../lib -I ./ patch100132-2
 
 -------------------------------------------------- 
-3 Example for TestDecorator and TestSetup:
+3 Example for TestDecorator and Setup:
 
 perl -I../lib/ ../TestRunner.pl fail_example
 
