--- a/src/Test-Unit/doc/TODO
+++ b/src/Test-Unit/doc/TODO
@@ -72,6 +72,8 @@ from t/assert.t.
 
 ** Test::Unit::Loader working with whole directories.
 
+Test::Unit::Loader::load_test_dir() needs to be finished.
+
 ** Test filtering
 
 Piers suggested the beautiful idea of using Attribute::Handlers so you
@@ -157,11 +159,6 @@ about that. 8-)  -- mca
 Current thinking is to keep test-coverage tests away from the executed
 tests, mainly so you can have a script which draws a pretty chart of
 how well your code is tested. Adam has some code for this.
-
-** output STDOUT only if error
-
-Tie STDOUT via IO::Scalar to capture output from calls to print() etc.
-within test cases, and only print output if there's an error.
 
 * Personal TODO lists
 
