deprecate this file

--- a/src/Test-Unit/Changes
+++ b/src/Test-Unit/Changes
@@ -1,3 +1,9 @@
+******************************************************************************
+* Due to lack of time, this file has been deprecated in favour of the
+* automatically generated ChangeLog file.  Sorry.
+******************************************************************************
+
+
 Revision history for Perl extension Test::Unit.
 
 0.14    - lots of changes and additions:
