change Adam's email address

--- a/src/Test-Unit/AUTHORS
+++ b/src/Test-Unit/AUTHORS
@@ -11,7 +11,7 @@
 # development is strictly forbidden. (Passive distribution with the
 # PerlUnit source code package is naturally allowed)
 -- 
-Adam Spiers                     <adam@spiers.net>
+Adam Spiers                     <perlunit@adamspiers.org>
 Brian Ewins
 Cayte Linder
 Christian Lemburg               <clemburg@acm.org>
