--- a/src/Test-Unit/examples/README
+++ b/src/Test-Unit/examples/README
@@ -4,7 +4,7 @@ It's a bit out of date now...
 tester.png: 
 -----------
 This is a screenshot of the GUI running (view with a PNG viewer, e.g.,
-your favorite web browser):
+your favorite web browser).  Also visible on the SF screenshot page.
 
 patch100132*, fail_example.pm
 -----------------------------
@@ -14,8 +14,3 @@ though.  fail_example.pm is supposed to be an example for
 TestDecorator and Setup.  You can run it via:
 
   perl -I../lib/ ../TestRunner.pl fail_example
-
-tester.pl
----------
-
-A file that Brian is (was?) working on ... 
